--- a/config/keyboard/combos/layers.dtsi
+++ b/config/keyboard/combos/layers.dtsi
@@ -9,7 +9,7 @@ combo_to_AXN {
     bindings = <&to_AXN>;
     key-positions = <14 15>;
     slow-release;
-    llayers = <BAS DEV AXN FNK STG>;
+    layers = <BAS DEV AXN FNK STG>;
 };
 
 combo_to_DEV {
