fix: remove same call to current layer

--- a/config/keyboard/combos/layers.dtsi
+++ b/config/keyboard/combos/layers.dtsi
@@ -2,26 +2,26 @@ combo_to_FNK {
     bindings = <&to_FNK>;
     key-positions = <4 5>;
     slow-release;
-    layers = <BAS DEV AXN FNK STG>;
+    layers = <BAS DEV AXN STG>;
 };
 
 combo_to_AXN {
     bindings = <&to_AXN>;
     key-positions = <14 15>;
     slow-release;
-    layers = <BAS DEV AXN FNK STG>;
+    layers = <BAS DEV FNK STG>;
 };
 
 combo_to_DEV {
     bindings = <&to_DEV>;
     key-positions = <25 26>;
     slow-release;
-    layers = <BAS DEV AXN FNK STG>;
+    layers = <BAS AXN FNK STG>;
 };
 
 combo_to_STG {
     bindings = <&mo_STG_to_BAS>;
     key-positions = <34 35>;
     slow-release;
-    layers = <BAS DEV AXN FNK STG>;
+    layers = <BAS DEV AXN FNK>;
 };
