--- a/config/keyboard/macros/layers.dtsi
+++ b/config/keyboard/macros/layers.dtsi
@@ -4,6 +4,7 @@ TO_MACRO(AXN)  //to_AXN
 TO_MACRO(FNK)  //to_FNK
 TO_MACRO(STG)  //to_STG
 
-MOTO_MACRO(AXN, BAS)  //mo_AXN_to_BAS
 MOTO_MACRO(DEV, BAS)  //mo_DEV_to_BAS
+MOTO_MACRO(AXN, BAS)  //mo_AXN_to_BAS
+MOTO_MACRO(FNK, BAS)  //mo_FNK_to_BAS
 MOTO_MACRO(STG, BAS)  //mo_STG_to_BAS
