--- a/config/keyboard/keymap.dtsi
+++ b/config/keyboard/keymap.dtsi
@@ -113,13 +113,13 @@
         };
 
         mac_act_num_layer {
-            #define MAUL1  &kp  LC(LS(LG(RIGHT)))        // tap: expand selection
+            #define MAUL1  &none
             #define MAUL2  &mp_action_prev               // tap: prev tab ¦ shift: prev desktop
             #define MAUL3  &kp UP                        // tap: up arrow
             #define MAUL4  &mp_action_next               // tap: next tab ¦ shift: next desktop
-            #define MAUL5  &kp  LG(F)                    // tap: find
+            #define MAUL5  &kp LG(F)                     // tap: find
 
-            #define MAML1  &hm LCTRL LC(LS(LG(LEFT)))    // tap: shrink selection ¦ hold: CONTROL
+            #define MAML1  &kp LCTRL                     // hold: CONTROL
             #define MAML2  &hm LCMD  LEFT                // tap: left arrow ¦ hold: COMMAND
             #define MAML3  &hm LALT  DOWN                // tap: down arrow ¦ hold: ALT
             #define MAML4  &hm LSHFT RIGHT               // tap: right arrow ¦ hold: SHIFT
@@ -189,11 +189,11 @@
             #define MFBL5  &none
 
             #define MFUR5  &none
-            #define MFUR4  &none
+            #define MFUR4  &kp LC(LS(LG(LEFT)))          // tap: shrink selection
             #define MFUR3  &kp PG_UP                     // tap: page up
-            #define MFUR2  &none
+            #define MFUR2  &kp LC(LS(LG(RIGHT)))         // tap: expand selection
             #define MFUR1  &none
-
+)
             #define MFMR5  &none
             #define MFMR4  &hm RSHFT HOME                // tap: home      ¦ hold: SHIFT
             #define MFMR3  &hm LALT  PG_DN               // tap: page down ¦ hold: ALT
