feat: prospector dongle configuration

--- a/config/boards/shields/totem/totem_layout.dtsi
+++ b/config/boards/shields/totem/totem_layout.dtsi
@@ -4,7 +4,7 @@
 / {
     default_layout: default_layout {
         compatible = "zmk,physical-layout";
-        display-name = "Default Layout";
+        display-name = "TOTEM";
         
         transform = <&default_transform>;
 
