--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,6 +1,7 @@
 # Increase transmission strength.
 # https://zmk.dev/docs/troubleshooting/connection-issues#unreliableweak-connection
 # CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # Bluetooth
 # https://zmk.dev/docs/config/system#bluetooth
@@ -20,3 +21,8 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # https://zmk.dev/docs/features/debouncing
 # CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
+
+# Prospector
+# https://github.com/carrefinho/prospector-zmk-module
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
+CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=50
