feat: remove label in favor of short display-name

--- a/config/keyboard/keymap.dtsi
+++ b/config/keyboard/keymap.dtsi
@@ -46,8 +46,7 @@
             #define MBTR0  &mp_BAS_sr                    //                  ¦ shift: to STG layer      ¦ hold: to STG momentary
 
 
-            label = "BAS";
-            display-name = "BASE";
+            display-name = "BAS";
             bindings = <
                      MBUL1  MBUL2  MBUL3  MBUL4  MBUL5    MBUR5  MBUR4  MBUR3  MBUR2  MBUR1
                      MBML1  MBML2  MBML3  MBML4  MBML5    MBMR5  MBMR4  MBMR3  MBMR2  MBMR1
@@ -104,8 +103,7 @@
             #define MDTR0  &kp LA(LG(I))                 // tap: dev tools
 
 
-            label = "DEV";
-            display-name = "DEVELOPER";
+            display-name = "DEV";
             bindings = <
                      MDUL1  MDUL2  MDUL3  MDUL4  MDUL5    MDUR5  MDUR4  MDUR3  MDUR2  MDUR1
                      MDML1  MDML2  MDML3  MDML4  MDML5    MDMR5  MDMR4  MDMR3  MDMR2  MDMR1
@@ -162,8 +160,7 @@
             #define MATR0  &kp EQUAL                     // tap: =
 
 
-            label = "AXN";
-            display-name = "ACTION & NUM";
+            display-name = "AXN";
             bindings = <
                      MAUL1  MAUL2  MAUL3  MAUL4  MAUL5    MAUR5  MAUR4  MAUR3  MAUR2  MAUR1
                      MAML1  MAML2  MAML3  MAML4  MAML5    MAMR5  MAMR4  MAMR3  MAMR2  MAMR1
@@ -220,8 +217,7 @@
             #define MFTR0  &none
 
 
-            label = "FNK";
-            display-name = "FUNCTION";
+            display-name = "FNK";
             bindings = <
                      MFUL1  MFUL2  MFUL3  MFUL4  MFUL5    MFUR5  MFUR4  MFUR3  MFUR2  MFUR1
                      MFML1  MFML2  MFML3  MFML4  MFML5    MFMR5  MFMR4  MFMR3  MFMR2  MFMR1
@@ -278,8 +274,7 @@
             #define MSTR0  &none
 
 
-            label = "STG";
-            display-name = "SETTINGS";
+            display-name = "STG";
             bindings = <
                      MSUL1  MSUL2  MSUL3  MSUL4  MSUL5    MSUR5  MSUR4  MSUR3  MSUR2  MSUR1
                      MSML1  MSML2  MSML3  MSML4  MSML5    MSMR5  MSMR4  MSMR3  MSMR2  MSMR1
