--- a/config/boards/shields/totem/totem_dongle.conf
+++ b/config/boards/shields/totem/totem_dongle.conf
@@ -15,3 +15,8 @@ CONFIG_ZMK_SLEEP=n
 # CONFIG_ZMK_LOG_LEVEL_DBG=y
 # https://zmk.dev/docs/config/kscan
 # CONFIG_KSCAN_LOG_LEVEL_INF=y
+
+# Dongle Screen
+# https://github.com/janpfischer/zmk-dongle-screen
+CONFIG_DONGLE_SCREEN_MAX_BRIGHTNESS=100
+CONFIG_DONGLE_SCREEN_BRIGHTNESS_STEP=5
