--- a/config/totem.conf
+++ b/config/totem.conf
@@ -14,15 +14,10 @@ CONFIG_ZMK_USB_LOGGING=n
 
 # Battery
 # https://zmk.dev/docs/config/battery#peripheral-battery-monitoring
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 # Key Chatter
 # https://zmk.dev/docs/features/debouncing
 # CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
-
-# Prospector
-# https://github.com/carrefinho/prospector-zmk-module
-CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
-CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=50
