--- a/config/boards/shields/totem/totem.dtsi
+++ b/config/boards/shields/totem/totem.dtsi
@@ -5,12 +5,12 @@
  */
 
 #include <dt-bindings/zmk/matrix_transform.h>
+#include "totem_layout.dtsi"
 
 / {
     chosen {
         zmk,kscan = &kscan0;
-        zmk,matrix_transform = &default_transform;
-        zmk,physical-layout = &physical_layout;
+        zmk,physical-layout = &default_layout;
     };
 
     default_transform: keymap_transform_0 {
